--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "twiter-clone",
+  "name": "twiterish",
   "version": "1.0.0",
   "main": "backend/server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon /server.js",
-    "start": "node backend/server.js"
+    "dev": "NODE_ENV=development nodemon /server.js",
+    "start": "NODE_ENV=production node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "win-node-env": "^0.6.1"
   }
 }
