--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3",
-    "win-node-env": "^0.6.1"
+    "nodemon": "^3.1.3"
   }
 }
