--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "backend/server.js",
   "type": "module",
   "scripts": {
+    "d": "nodemon /server.js",
     "dev": "NODE_ENV=development nodemon /server.js",
     "start": "NODE_ENV=production node backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
